Remove not needed world languages table, add validation of language
